namespace java UpdateServer
namespace csharp UpdateClient


service UpdateService {
	void update()
}